gcc/testsuite/rust/rustc/ui/parser/diff-markers/use-statement_dg.rs
use foo::{
<<<<<<< HEAD // { dg-error "" "" { target *-*-* } }
    bar,
=======
    baz,
>>>>>>> branch
};

fn main() {}

